Closed Bug 1208908 Opened 10 years ago Closed 10 years ago

Fix a conditional statement in BytecodeRangeWithPosition::updatePosition()

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: ehsan.akhgari, Unassigned)

References

Details

Attachments

(1 file)

No description provided.
Found by Viva64.
Attachment #8666525 - Flags: review?(ejpbruel)
Blocks: 710966
Attachment #8666525 - Flags: review?(ejpbruel) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: